site/content/docs/v0.6.0/cli-reference/ark_describe.md
---
title: "ark describe"
layout: docs
---

Describe ark resources

### Synopsis


Describe ark resources

### Options

```
  -h, --help   help for describe
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --kubeconfig string                Path to the kubeconfig file to use to talk to the Kubernetes apiserver. If unset, try the environment variable KUBECONFIG, as well as in-cluster configuration
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [ark](ark.md)	 - Back up and restore Kubernetes cluster resources.
* [ark describe backups](ark_describe_backups.md)	 - Describe backups
* [ark describe restores](ark_describe_restores.md)	 - Describe restores
* [ark describe schedules](ark_describe_schedules.md)	 - Describe schedules

